# llvm-verify-pass

./: .gitignore  CMakeLists.txt  README.md
include/: GlobalVariablePass.h  Program.h  SafetyVerificationPass.h
input/: dekker-b.ll  dekker.ll  gcd-2.ll  lamport-b.ll  lamport.ll  peterson-b.ll  peterson.ll  qrcu-1.ll  qrcu-2.ll  read_write_lock-1.ll  read_write_lock-1b.ll  read_write_lock-2.ll  read_write_lock-2b.ll  scull.ll  szymanski-b.ll  szymanski.ll  time_var_mutex.ll
lib/: CMakeLists.txt  GlobalVariablePass.cpp  Program.cpp  SafetyVerificationPass.cpp
test/: peterson.c  peterson.ll
